--- a/apps/web/src/app/app.component.html
+++ b/apps/web/src/app/app.component.html
@@ -1,6 +1,1 @@
-<input type="file" (change)="onFileSelect($event)">
-<button (click)="uploadFile()">Upload</button>
-<ng-container *ngIf="link">
-  <hr>
-  <a [href]="this.link">{{ link }}</a>
-</ng-container>
+<router-outlet></router-outlet>
