--- a/apps/web/src/custom-theme.scss
+++ b/apps/web/src/custom-theme.scss
@@ -104,3 +104,4 @@ $my-theme: mat.define-light-theme((
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+button * { text-transform: uppercase; }
