--- a/apps/web/src/app/upload/upload.component.html
+++ b/apps/web/src/app/upload/upload.component.html
@@ -1,6 +1,13 @@
-<input type="file" (change)="onFileSelect($event)">
-<button (click)="uploadFile()">Upload</button>
+<button mat-flat-button color="primary" (click)="fileInput.click()">
+  <mat-icon>file_open</mat-icon>
+  Select file
+  <input #fileInput type="file" (change)="onFileSelect($event)" style="display: none;">
+</button>
+<p>{{ filename }}</p>
+<button mat-stroked-button color="accent" (click)="uploadFile()">
+  <mat-icon>upload</mat-icon>
+  Upload
+</button>
 <ng-container *ngIf="link">
-  <hr>
   <a [href]="link">{{ link }}</a>
 </ng-container>
