--- a/apps/web/src/app/file/file.component.html
+++ b/apps/web/src/app/file/file.component.html
@@ -1,19 +1,21 @@
-<h3>File information</h3>
-<mat-list *ngIf="fileInfo">
-  <mat-list-item>
-    <span matListItemTitle>Name</span>
-    <span matListItemLine>{{ fileInfo.filename }}</span>
-  </mat-list-item>
-  <mat-list-item>
-    <span matListItemTitle>Type</span>
-    <span matListItemLine>{{ fileInfo.mimetype }}</span>
-  </mat-list-item>
-  <mat-list-item>
-    <span matListItemTitle>Size</span>
-    <span matListItemLine>{{ fileInfo.size }} bytes</span>
-  </mat-list-item>
-</mat-list>
-<button mat-raised-button color="primary" (click)="downloadFile()">
-  <mat-icon>download</mat-icon>
-  Download
-</button>
+<div class="center">
+  <h3>File information</h3>
+  <mat-list *ngIf="fileInfo">
+    <mat-list-item>
+      <span matListItemTitle>Name</span>
+      <span matListItemLine>{{ fileInfo.filename }}</span>
+    </mat-list-item>
+    <mat-list-item>
+      <span matListItemTitle>Type</span>
+      <span matListItemLine>{{ fileInfo.mimetype }}</span>
+    </mat-list-item>
+    <mat-list-item>
+      <span matListItemTitle>Size</span>
+      <span matListItemLine>{{ fileInfo.size }} bytes</span>
+    </mat-list-item>
+  </mat-list>
+  <button mat-raised-button color="primary" (click)="downloadFile()">
+    <mat-icon>download</mat-icon>
+    Download
+  </button>
+</div>
