--- a/apps/web/src/custom-theme.scss
+++ b/apps/web/src/custom-theme.scss
@@ -105,3 +105,10 @@ $my-theme: mat.define-light-theme((
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 button * { text-transform: uppercase; }
+.center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
