--- a/apps/web/src/app/upload/upload.component.sass
+++ b/apps/web/src/app/upload/upload.component.sass
@@ -1,7 +1,9 @@
 #filename
   margin: 16px
 
-#link-container
+mat-divider
   width: 100%
-  mat-divider
-    margin: 16px 0
+  margin: 16px 0
+
+mat-progress-bar
+  max-width: 500px
